--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".NearbyBirds" />
-        <activity android:name=".IdentifyBird"></activity>
+        <activity android:name=".IdentifyBird" />
+        <activity android:name=".Image2Server"></activity>
     </application>
 
 </manifest>
